tool/src/java/snapshots/diplomat_tool__java__test__enum_and_struct.snap
---
source: tool/src/java/mod.rs
expression: res
---
package dev.diplomattest.somelib;

import dev.diplomattest.somelib.ntv.*;

import java.lang.foreign.Arena;
import java.lang.foreign.MemorySegment;
import java.lang.ref.Cleaner;
import java.lang.foreign.SegmentAllocator;
import java.util.List;
import static java.lang.foreign.ValueLayout.*;
import java.nio.charset.StandardCharsets;
import java.util.stream.Stream;

public class MyStruct {
    byte a;
    boolean b;
    byte c;
    long d;
    int e;
    int f;
    MyEnum g;
    

    MemorySegment internal;
    SegmentAllocator arena;
    List<Object> selfEdges = List.of();
    

    private MyStruct(SegmentAllocator arena) {
        this.arena = arena;
    }

    MyStruct(SegmentAllocator arena, MemorySegment structSegment) {
        this.arena = arena;
        this.selfEdges = selfEdges;
        

        this.a = dev.diplomattest.somelib.ntv.MyStruct.a(structSegment);
        this.b = dev.diplomattest.somelib.ntv.MyStruct.b(structSegment);
        this.c = dev.diplomattest.somelib.ntv.MyStruct.c(structSegment);
        this.d = dev.diplomattest.somelib.ntv.MyStruct.d(structSegment);
        this.e = dev.diplomattest.somelib.ntv.MyStruct.e(structSegment);
        this.f = dev.diplomattest.somelib.ntv.MyStruct.f(structSegment);
        this.g = MyEnum.fromInt(dev.diplomattest.somelib.ntv.MyStruct.g(structSegment));
        

    }
    
    public static MyStruct new_() {
        
        var returnArena = (SegmentAllocator) Arena.ofAuto();
        var nativeVal = somelib_h.MyStruct_new(returnArena);
        
        
        var returnVal = new MyStruct(returnArena, nativeVal);
        return returnVal;
    }
    
}


============================
package dev.diplomattest.somelib;

import dev.diplomattest.somelib.ntv.somelib_h;


import java.lang.foreign.Arena;
import java.lang.foreign.MemorySegment;
import java.lang.ref.Cleaner;
import java.lang.foreign.SegmentAllocator;
import static java.lang.foreign.ValueLayout.*;
import java.nio.charset.StandardCharsets;

public enum MyEnum {
    A,
    B,
    C,
    D,
    E,
    F,
    ;

    static MyEnum fromInt(int i) {
        switch (i) {
            case -2 -> {
                return MyEnum.A;
            }
            case -1 -> {
                return MyEnum.B;
            }
            case 0 -> {
                return MyEnum.C;
            }
            case 1 -> {
                return MyEnum.D;
            }
            case 2 -> {
                return MyEnum.E;
            }
            case 3 -> {
                return MyEnum.F;
            }
            
        }
        throw new RuntimeException("Unexpected int for MyEnum:" + i);
    }

    int toInt() {
        switch (this) {
            case A -> {
                return -2;
            }
            case B -> {
                return -1;
            }
            case C -> {
                return 0;
            }
            case D -> {
                return 1;
            }
            case E -> {
                return 2;
            }
            case F -> {
                return 3;
            }
            
        }
        throw new RuntimeException("Unexpected variant for MyEnum:" + this);
    }

    
    public static MyEnum getA() {
        
        var nativeVal = somelib_h.MyEnum_get_a();
        return MyEnum.fromInt(nativeVal);
    }
    
}

============================
