tool/src/java/snapshots/diplomat_tool__java__test__opaque_render.snap
---
source: tool/src/java/mod.rs
expression: rendered
---
package dev.diplomattest.somelib;

import dev.diplomattest.somelib.ntv.*;


import java.lang.foreign.Arena;
import java.lang.foreign.MemorySegment;
import java.lang.foreign.SegmentAllocator;
import java.lang.ref.Cleaner;
import java.util.List;
import static java.lang.foreign.ValueLayout.*;
import java.nio.charset.StandardCharsets;

public class Opaque2 {

    MemorySegment internal;
    Cleaner.Cleanable cleanable;

    List<Object> selfEdges = List.of();
    

    static class Opaque2Cleaner implements Runnable {

        MemorySegment segment;
        Opaque2Cleaner(MemorySegment segment) {
            this.segment = segment;
        }

        public void run() {
            somelib_h.Opaque2_destroy(this.segment);
        }
    }

    Opaque2() {}
    
    
}
