tool/src/java/snapshots/diplomat_tool__java__test__slice.snap
---
source: tool/src/java/mod.rs
expression: res
---
package dev.diplomattest.somelib;

import dev.diplomattest.somelib.ntv.*;


import java.lang.foreign.Arena;
import java.lang.foreign.MemorySegment;
import java.lang.foreign.SegmentAllocator;
import java.lang.ref.Cleaner;
import java.util.List;
import static java.lang.foreign.ValueLayout.*;
import java.nio.charset.StandardCharsets;

public class Float64Vec {

    MemorySegment internal;
    Cleaner.Cleanable cleanable;

    List<Object> selfEdges = List.of();
    

    static class Float64VecCleaner implements Runnable {

        MemorySegment segment;
        Float64VecCleaner(MemorySegment segment) {
            this.segment = segment;
        }

        public void run() {
            somelib_h.Float64Vec_destroy(this.segment);
        }
    }

    Float64Vec() {}
    
    public static Float64Vec new_(double[] v) {
        
        try (var arena = Arena.ofConfined()) {
            var vLen = v.length;
            var vMemSeg = arena.allocateFrom(JAVA_DOUBLE, v);
            var nativeVal = somelib_h.Float64Vec_new(vMemSeg, vLen);
            var returnVal = new Float64Vec();
            
            returnVal.internal = nativeVal;
            var cleaner = new Float64Vec.Float64VecCleaner(nativeVal);
            returnVal.cleanable = Lib.cleaner.register(returnVal, cleaner);
            return returnVal;
        }
    }
    
    
    public double[] asBoxedSlice() {
        
        var boxArena = Arena.ofConfined();
        
        var nativeVal = somelib_h.Float64Vec_as_boxed_slice(boxArena, internal);
        var data = dev.diplomattest.somelib.ntv.DiplomatF64View.data(nativeVal);
        var len = dev.diplomattest.somelib.ntv.DiplomatF64View.len(nativeVal);
        return SliceUtils.doubleSliceToArray(nativeVal);
    }
    
    public double[] asSlice() {
        
        try (var arena = Arena.ofConfined()) {
            
            
            var nativeVal = somelib_h.Float64Vec_as_slice(arena, internal);
            var data = dev.diplomattest.somelib.ntv.DiplomatF64View.data(nativeVal);
            var len = dev.diplomattest.somelib.ntv.DiplomatF64View.len(nativeVal);
            return SliceUtils.doubleSliceToArray(nativeVal);
        }
    }
    
}
============================
package dev.diplomattest.somelib;

import dev.diplomattest.somelib.ntv.*;


import java.lang.foreign.Arena;
import java.lang.foreign.MemorySegment;
import java.lang.foreign.SegmentAllocator;
import java.lang.ref.Cleaner;
import java.util.List;
import static java.lang.foreign.ValueLayout.*;
import java.nio.charset.StandardCharsets;

public class MyString {

    MemorySegment internal;
    Cleaner.Cleanable cleanable;

    List<Object> selfEdges = List.of();
    

    static class MyStringCleaner implements Runnable {

        MemorySegment segment;
        MyStringCleaner(MemorySegment segment) {
            this.segment = segment;
        }

        public void run() {
            somelib_h.MyString_destroy(this.segment);
        }
    }

    MyString() {}
    
    public MyString(String v) {
        
        try (var arena = Arena.ofConfined()) {
            var vMemSeg = arena.allocateFrom(v, StandardCharsets.UTF_8);
            var vLen = vMemSeg.byteSize();
            var nativeVal = somelib_h.MyString_new(vMemSeg, vLen - 1);
            this.internal = nativeVal;
            var cleaner = new MyString.MyStringCleaner(nativeVal);
            this.cleanable = Lib.cleaner.register(this, cleaner);
        }
    }
    
    public static MyString newUnsafe(String v) {
        
        try (var arena = Arena.ofConfined()) {
            var vMemSeg = arena.allocateFrom(v, StandardCharsets.UTF_8);
            var vLen = vMemSeg.byteSize();
            var nativeVal = somelib_h.MyString_new_unsafe(vMemSeg, vLen - 1);
            var returnVal = new MyString();
            
            returnVal.internal = nativeVal;
            var cleaner = new MyString.MyStringCleaner(nativeVal);
            returnVal.cleanable = Lib.cleaner.register(returnVal, cleaner);
            return returnVal;
        }
    }
    
    public static MyString newOwned(String v) {
        
        var vMemSeg = Arena.global().allocateFrom(v, StandardCharsets.UTF_8);
        var vLen = vMemSeg.byteSize();
        var nativeVal = somelib_h.MyString_new_owned(vMemSeg, vLen - 1);
        var returnVal = new MyString();
        
        returnVal.internal = nativeVal;
        var cleaner = new MyString.MyStringCleaner(nativeVal);
        returnVal.cleanable = Lib.cleaner.register(returnVal, cleaner);
        return returnVal;
    }
    
    public static MyString newFromFirst(String [] v) {
        
        try (var arena = Arena.ofConfined()) {
            var vData = SliceUtils.strs8(arena, v);
            var vLen = v.length;
            var nativeVal = somelib_h.MyString_new_from_first(vData, vLen);
            var returnVal = new MyString();
            
            returnVal.internal = nativeVal;
            var cleaner = new MyString.MyStringCleaner(nativeVal);
            returnVal.cleanable = Lib.cleaner.register(returnVal, cleaner);
            return returnVal;
        }
    }
    
    
    public void setStr(String newStr) {
        
        try (var arena = Arena.ofConfined()) {
            
            var newStrMemSeg = arena.allocateFrom(newStr, StandardCharsets.UTF_8);
            var newStrLen = newStrMemSeg.byteSize();
            somelib_h.MyString_set_str(internal, newStrMemSeg, newStrLen - 1);
            
        }
    }
    
    public String getStr() {
        
        
        var writeable = somelib_h.diplomat_buffer_write_create(0);
        somelib_h.MyString_get_str(internal, writeable);
        var buffer = DiplomatWrite.buf(writeable);
        var string = buffer.getString(0, StandardCharsets.UTF_8);
        somelib_h.diplomat_buffer_write_destroy(writeable);
        return string;
    }
    
    public String getBoxedStr() {
        
        var boxArena = Arena.ofConfined();
        
        var nativeVal = somelib_h.MyString_get_boxed_str(boxArena, internal);
        return SliceUtils.readUtf8(nativeVal);
    }
    
}
============================
